<resources>
    <string name="app_name">Fohire</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_profile">Profile</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_activity_test">Test</string>
    <string-array name="search">
        <item>Hello</item>
        <item>abc</item>
    </string-array>

    <string name="facebook_app_id">1827097434233915</string>
    <string name="fb_login_protocol_scheme">fb1827097434233915</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Home Fragment</string>
    <string name="Notification">Notification Fragment</string>
    <string name="Profile">Profile Fragment</string>
    <string name="Favourite">Favourite Fragment</string>
</resources>
